# Cayenue

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  run.py  setup.py
assets/scripts/flatpak/: intel.icd  io.github.sr99622.Cayenue.desktop  io.github.sr99622.Cayenue.metainfo.xml  io.github.sr99622.Cayenue.yml
assets/scripts/mac/: build_app  launcher.c
assets/scripts/snap/: snapcraft.yaml
assets/scripts/snap/gui/: cayenue.desktop
assets/scripts/windows/: build_installer.bat  cayenue.nsi  license.txt
cayenue/: enums.py  glwidget.py  main.py  manager.py  player.py  server.py
cayenue/components/: comboselector.py  directoryselector.py  diskmanager.py  fileselector.py  infodialog.py  progress.py  target.py  thresholdslider.py  warningbar.py
cayenue/panels/audio/: audiopanel.py
cayenue/panels/audio/modules/: sample.py
cayenue/panels/camera/: cameralist.py  camerapanel.py  datastructures.py  imagetab.py  logindialog.py  networktab.py  ptztab.py  snapshot.py  systemtab.py  videotab.py
cayenue/panels/file/: __init__.py  controlpanel.py  filepanel.py  filesortproxy.py  searchdialog.py  treeview.py
cayenue/panels/picture/: picturepanel.py
cayenue/panels/settings/: alarm.py  discover.py  general.py  proxy.py  settingspanel.py  storage.py
cayenue/panels/video/: videopanel.py
cayenue/panels/video/modules/: motion.py  settings.py  yolox.py
cayenue/protocols/: client.py  listen.py  server.py
cayenue/resources/: LICENSE  darkstyle.qss
