#/********************************************************************
# Cayenue/pyproject.toml
#
# Copyright (c) 2026  Stephen Rhodes
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#*********************************************************************/

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cayenue"
version = "1.0.2"
description = "A client GUI for ONVIF"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["onvif", "gui", "qt", "camera"]
authors = [
  { name = "Stephen Rhodes", email = "sr99622@gmail.com" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "libonvif==3.2.8",
  "avio==3.2.7",
  "kankakee==1.0.4",
  "numpy",
  "loguru",
  "opencv-python-headless",
  "PyQt6-Qt6",
  "PyQt6",
  "requests"
]

[project.urls]
Homepage = "https://github.com/sr99622/Cayenue"
Issues = "https://github.com/sr99622/Cayenue/issues"

[project.gui-scripts]
cayenue = "cayenue.main:run"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
cayenue = ["resources/**/*"]
